export const snapshot = {};

snapshot[`Document View Command - Help Text 1`] = `
stdout:
"
Usage: view <id>

Description:

  View a document's content

Options:

  -h, --help     - Show this help.                                
  --raw          - Output raw markdown without rendering          
  -w, --web      - Open document in browser                       
  --json         - Output full document as JSON                   
  --no-download  - Keep remote URLs instead of downloading files  

"
stderr:
""
`;

snapshot[`Document View Command - View Document 1`] = `
stdout:
"# Delegation System

This document describes the delegation system architecture.

## Overview

The system supports user-to-user delegations with time-bounded capabilities.

## Implementation

- UCAN-based delegation chains
- PKH DID format for user identity
- Session key DIDs for signing
"
stderr:
""
`;

snapshot[`Document View Command - Raw Output 1`] = `
stdout:
"# Delegation System

This document describes the delegation system architecture.
"
stderr:
""
`;

snapshot[`Document View Command - JSON Output 1`] = `
stdout:
'{
  "id": "doc-1",
  "title": "Delegation System Spec",
  "slugId": "d4b93e3b2695",
  "content": "# Delegation System\\\\n\\\\nThis document describes the delegation system architecture.",
  "url": "https://linear.app/test/document/delegation-system-spec-d4b93e3b2695",
  "createdAt": "2026-01-15T08:00:00Z",
  "updatedAt": "2026-01-18T10:30:00Z",
  "creator": {
    "name": "John Doe",
    "email": "john@example.com"
  },
  "project": {
    "name": "TinyCloud SDK",
    "slugId": "tinycloud-sdk"
  },
  "issue": null,
  "comments": {
    "nodes": [
      {
        "id": "comment-1",
        "body": "Can we clarify this?",
        "quotedText": "delegation system architecture",
        "documentContentId": "document-content-1",
        "createdAt": "2026-01-18T11:00:00Z",
        "updatedAt": "2026-01-18T11:00:00Z",
        "archivedAt": null,
        "resolvedAt": null,
        "url": "https://linear.app/test/comment/comment-1",
        "user": {
          "name": "Jane Reviewer",
          "email": "jane@example.com"
        },
        "parent": null
      },
      {
        "id": "comment-2",
        "body": "Follow-up note",
        "quotedText": null,
        "documentContentId": "document-content-1",
        "createdAt": "2026-01-18T12:00:00Z",
        "updatedAt": "2026-01-18T12:00:00Z",
        "archivedAt": null,
        "resolvedAt": null,
        "url": "https://linear.app/test/comment/comment-2",
        "user": {
          "name": "John Doe",
          "email": "john@example.com"
        },
        "parent": {
          "id": "comment-1"
        }
      }
    ],
    "pageInfo": {
      "hasNextPage": false,
      "endCursor": null
    }
  }
}
'
stderr:
""
`;

snapshot[`Document View Command - No Download Keeps Remote URLs 1`] = `
stdout:
"# Doc

![screenshot](https://uploads.linear.app/abc/screenshot.png)
"
stderr:
""
`;

snapshot[`Document View Command - Document Attached To Issue 1`] = `
stdout:
"# Investigation Notes

Notes from investigating TC-123.
"
stderr:
""
`;
